src/components/visual/products/Products.module.css
.boxProducts {
    flex: 1;
    margin: 0 0 1rem 1rem;
    padding: 0;
    /* debug */
    /* background-color: rgb(45, 26, 115); */
}

@media (max-width:768px) {
    .boxProducts {
        margin: 0 auto;
    }
}

.boxProducts h4 {
    text-align: center;
    padding: 1rem;

    /* debug */
    /* background-color: red; */
}

/* doughs */
.boxProducts .dough {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    color: var(--primary-white);
    text-align: center;
    padding: 0 2rem;
    min-height: 25rem;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    border-bottom: 0.5px solid var(--primary-brown);

    /* debug */
    /* background-color: plum; */
}

@media (max-width:768px) {
    .boxProducts .dough {
        min-height: 20rem;
    }
}

/* traditional */
.boxProducts .dough#traditional {
    background-image: url(../../../doughts/impasto_tradizionale.png);

}

/* wholeWheat */
.boxProducts .dough#wholeWheat {
    background-image: url(../../../doughts/impasto_integrale.png);
}

/* glutenFree */
.boxProducts .dough#glutenFree {
    background-image: url(../../../doughts/impasto_gluten_free.png);
}

/* rustic */
.boxProducts .dough#rustic {
    background-image: url(../../../doughts/impasto_rustico.png);
}

/* crispy */
.boxProducts .dough#crispy {
    background-image: url(../../../doughts/impasto_scrocchiarella.png);
}

.boxProducts .dough h5 {
    font-size: 2rem;
    font-weight: 700;
    padding-bottom: 1rem;
}

/* price */
.boxProducts .dough .price {
    padding-top: 1.5rem;
    font-size: 1.2rem;
}

/* products */

@media (max-width:768px) {
    .boxProducts .products {
        margin: 0 1rem;
    }
}








/* .boxProducts .product { */
/* debug */
/* background-color: coral; */
/* height: 1000px; */
/* } */
/* product -> title */
.products .product {
    display: flex;
    margin: 2rem 0;
}

.products .product.disabled {
    /* background-color: red; */
    opacity: 0.5;

    filter: sepia(100%) brightness(80%);
}

.products h5 {
    text-align: center;
}


/* leftCol */
.products .leftCol {
    width: 70%;
    /* background-color: red; */
}

.products .title {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin-bottom: 0.5rem;
}

.products .title h6 {
    font-size: 1.1rem;
    font-weight: 350;
}

.products .title img {
    width: 1.1rem;
}

.products .title img#spicy {
    transform: rotateZ(35deg);
}

/* product -> description */
.products .description {
    font-weight: 150;
    font-size: 0.9rem;
}

/* product -> alcoholVolume */
.products .alcoholVolume {
    font-weight: 150;
    margin-top: 0.3rem;
}

/* product -> allergens */
.products .allergens {
    display: flex;
    gap: 0.3rem;
}

.products .allergens span {
    display: flex;
    width: 1.1rem;
    height: 1.1rem;
    border: 1px solid var(--primary-gold);
    border-radius: 50%;
    padding: 0.2rem;
}

.products .allergens span img {
    width: 100%;
}

/* product -> productPrice */


/* rightCol */
.products .rightCol {
    display: flex;
    align-items: center;
    width: 30%;
    /* background-color: rgb(154, 153, 157); */
}

@media (max-width:576px) {
    .products .leftCol {
        width: 85%;
    }

    .products .description {
        width: 95%;
    }

    .products .rightCol {
        flex-direction: column;
        gap: 0.3rem;
        width: 15%;
    }
}

.product .productPrice {
    flex: 1;
    font-size: 0.9rem;
    text-align: center;
    align-content: center;
    /* background-color: grey; */
}

.productPrice .text {
    font-size: 0.5rem;
    font-weight: 200;
}




.products .subtitle {
    display: flex;
    align-items: center;
}

.products .subtitle span {
    flex-grow: 1;
    height: 0.07rem;
    border-bottom: 0.07rem dotted var(--primary-brown);
    position: relative;
    /* background-color: rgb(136, 0, 255); */
}

.products .subtitle h5 {
    padding: 0 2rem;
    /* background-color: rgb(136, 0, 255); */
}

